[metadata]
name = github-webhooks
version = 2019.02.16
url = https://github.com/looking-for-a-job/github-webhooks.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = github webhooks

[options]
install_requires =
	Requests
	click
	github_repo
	public
	setuptools
packages =
	github_webhooks
