# https://pypi.org/project/setupcfg-generator/
[metadata]
name = github-webhooks
version = 2019.3.22
url = https://github.com/looking-for-a-job/github-webhooks.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = github webhooks

[options]
install_requires = 
	Requests
	click
	github_repo
	ini2dict
	public
	setuptools
	values
packages = 
	github_webhooks
